<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ManDown</string>
    <string name="action_settings">Settings</string>
    <string name="MainActivity_title">ManDown accelerometers</string>
    <string name="axisX_title">Axis X</string>
    <string name="axisY_title">Axis Y</string>
    <string name="axisZ_title">Axis Z</string>
    <string name="SnapshotButton">Measure</string>
    <string name="clearMaxButton">Clear Max</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="choose_filter_key">FILTER_CHOOSE_KEY</string>
    <string name="choose_filter">Filter type</string>
    <string name="choose_filter_summary">Choose filter type to be applied</string>

</resources>
