<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/MainActivity_title"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top|fill_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/axisX_title"
                android:text="@string/axisX_title"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="30sp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/axisX_value"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1" />
            
            <TextView
                android:id="@+id/axisX_max"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:weightSum="3"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/axisY_title"
                android:text="@string/axisY_title"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="30sp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/axisY_value"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1" />
            
            <TextView
                android:id="@+id/axisY_max"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:weightSum="3"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/axisZ_title"
                android:text="@string/axisZ_title"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="30sp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/axisZ_value"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1" />
            
            <TextView
                android:id="@+id/axisZ_max"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1" />

        </LinearLayout>

       

    </LinearLayout>

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="10sp" >

        <TextView
            android:id="@+id/axisXSnap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#C0C0C0"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_margin="5dp" />

        <TextView
            android:id="@+id/axisYSnap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#C0C0C0"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_margin="5dp"  />


        <TextView
            android:id="@+id/axisZSnap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#C0C0C0"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_margin="5dp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="3sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/axisXSnapTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="axisX" />

        <TextView
            android:id="@+id/axisYSnapTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="axisY"
            android:layout_weight="1"
            android:ems="10" />

        <TextView
            android:id="@+id/axisZSnapTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="axisZ"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <Button
        android:id="@+id/measureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/SnapshotButton"/>
    
    <Button
        android:id="@+id/clearMaxButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clearMaxButton"/>

</LinearLayout>
